commit du 8juin midi

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <title>Planning</title>
         <link rel="stylesheet" href="css/lib/bootstrap.min.css">
         <link rel="stylesheet" href="/css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
     </head>
     <body ng-app="planningApp" ng-controller="planningCtrl">
 
@@ -31,8 +31,7 @@
         <script src="js/services/planningFactory.js"></script>
         <script src="js/services/roomsFactory.js"></script>
         <script src="js/services/topicsFactory.js"></script>
-
-
+        <script src="js/services/teachersFactory.js"></script>
 
         <!--CONTROLLER-->
         <script src="js/controllers/planningCtrl.js"></script>
@@ -43,6 +42,9 @@
         <script src="js/directives/cours.js"></script>
         <script src="js/directives/courscandidat.js"></script>
         <script src="js/directives/ngjs-color-picker.js"></script>
+        <script src="js/directives/checkbox.js"></script>
 
+        <!--FILTERS-->
+        <script src="js/filters/filters.js"></script>
     </body>
 </html>
